# nova

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE-MIT  Makefile  README.md  cliff.toml  compose.yml
.clangd/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  release.yml  testing-quality.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md  v2.12-MILESTONE-AUDIT.md  v2.7-MILESTONE-AUDIT.md  v2.8-MILESTONE-AUDIT.md  v2.9-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.12-REQUIREMENTS.md  v2.12-ROADMAP.md  v2.7-REQUIREMENTS.md  v2.7-ROADMAP.md  v2.8-ROADMAP.md  v2.8-STATE.md
.planning/phases/: REVIEWS.md
.planning/phases-archive/phase-25-sync-batchnorm/: 25-01-PLAN.md  25-02-PLAN.md  25-03-PLAN.md  25-SUMMARY.md  CONTEXT.md
.planning/phases-archive/phase-26-profiling/: 26-01-PLAN.md  26-SUMMARY.md  CONTEXT.md
.planning/phases-archive/phase-27-kernel-fusion/: 27-SUMMARY.md
.planning/phases-archive/phase-28-memory-opt/: 28-SUMMARY.md
.planning/phases/01-performance-foundations/: 01-01-PLAN-SUMMARY.md  01-02-PLAN-SUMMARY.md  01-03-PLAN-SUMMARY.md
.planning/phases/02-async-streaming/: 02-01-PLAN-SUMMARY.md  02-02-PLAN-SUMMARY.md
.planning/phases/03-fft-module/: 03-01-PLAN-SUMMARY.md  03-01-PLAN.md
.planning/phases/04-ray-tracing/: 04-01-PLAN.md
.planning/phases/06-neural-primitives/: 06-01-PLAN.md
.planning/phases/07-device-mesh/: 07-01-SUMMARY.md
.planning/phases/08-data-parallelism/: 08-01-SUMMARY.md
.planning/phases/09-memory-pool/: 09-01-PLAN-SUMMARY.md  09-01-PLAN.md
.planning/phases/10-matmul/: 10-01-PLAN.md
.planning/phases/100/: 100-CONTEXT.md  100-SUMMARY.md  100-VERIFICATION.md
.planning/phases/69/: 69-PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md  ARCHITECTURE_v2.4.md  FEATURES.md  PITFALLS.md  PITFALLS_v2.4.md  STACK.md  SUMMARY.md
benchmark/: CMakeLists.txt  VERIFICATION.md  benchmark_kernels.cu
cmake/: FindMPI.cmake  NovaConfig.cmake.in
data/: test_patterns.cuh
docs/: PRODUCTION.md  ide-setup.md
examples/: README.md  distributed_training.cpp  graph_algorithms.cpp  image_processing.cpp  neural_net.cpp
include/: brightness.h  image_utils.h  matrix_mult.h  reduce.h  scan.h  sobel_edge.h  sort.h
include/convolution/: conv2d.h
include/image/: brightness.h  gaussian_blur.h  types.h
include/matrix/: mult.h
include/parallel/: scan.h  sort.h
scripts/benchmark/: generate_dashboard.py  run_benchmarks.py
src/: brightness.cu  image_utils.cu  main.cpp  matrix_mult.cu  reduce.cu  scan.cu  sobel_edge.cu  sort.cu
src/algo/: flash_attention.cu
src/convolution/: conv2d.cu
src/image/: brightness.cu  gaussian_blur.cu  morphology.cu  sobel_edge.cu  types.cu
src/matrix/: add.cu  mult.cu  ops.cu
src/memory/: buffer.cpp  memory_pool.cpp
src/observability/: bandwidth_tracker.cpp  kernel_stats.cpp  occupancy_analyzer.cpp  timeline.cpp
src/parallel/: histogram.cu  scan.cu  sort.cu
src/testing/: boundary_testing.cpp  fp_determinism.cpp  layer_error_injection.cpp  memory_safety.cpp  test_isolation.cpp
tests/: CMakeLists.txt  CMakeProperty.txt  algo_sort_test.cu  async_copy_test.cpp  brightness_test.cu  convolution_test.cu  cublas_context_test.cu  degrade_test.cpp  device_info_test.cpp  error_context_test.cpp  error_handling_integration_test.cpp  gaussian_blur_test.cu  histogram_test.cu  image_utils_test.cu  matrix_mult_test.cu  matrix_ops_test.cu  memory_metrics_test.cpp  memory_pool_metrics_test.cpp  memory_pool_stream_test.cpp  memory_pool_test.cpp  morphology_test.cu  pinned_memory_test.cpp  reduce_test.cu  retry_test.cpp  scan_test.cu  sobel_edge_test.cu  sort_test.cu  stream_event_test.cpp  stream_manager_test.cpp  test_matrix.cpp  timeout_propagation_test.cpp  timeout_test.cpp
tests/algo/: flash_attention_edge_test.cu  flash_attention_test.cu
tests/benchmark/: benchmark_test.cpp  inference_benchmark.cpp  regression_test.cpp  throughput_test.cpp
tests/cuda/nccl/: test_nccl_collectives.cpp
tests/distributed/: distributed_matmul_test.cu  distributed_ops_test.cu  distributed_pool_test.cu  sequence_parallel_edge_test.cpp  sequence_parallel_test.cpp
tests/fft/: fft_accuracy_test.cpp  fft_inverse_test.cpp  fft_plan_test.cpp
tests/graph/: bfs_test.cpp  csr_graph_test.cpp  pagerank_test.cpp
tests/inference/: beam_search_test.cpp  block_manager_edge_test.cpp  block_manager_test.cpp  integration_test.cpp  scheduler_edge_test.cpp  scheduler_test.cpp  speculative_decoding_test.cpp
tests/memory/: kv_cache_allocator_edge_test.cpp  kv_cache_allocator_test.cpp
tests/memory_opt/: memory_optimizer_edge_test.cpp
tests/mesh/: device_mesh_test.cu
tests/mpi/: test_mpi_context.cpp
tests/multinode/: test_multi_node_context.cpp
tests/neural/fusion/: fused_matmul_bias_act_edge_test.cpp
tests/neural/loss/: loss_functions_test.cpp
tests/neural/transformer/: attention_test.cpp
tests/observability/: bandwidth_tracker_test.cpp  kernel_stats_test.cpp  occupancy_analyzer_test.cpp  timeline_test.cpp
tests/performance/: autotuner_edge_test.cpp
tests/production/: observability_test.cpp  stress_test.cpp
tests/property/: README.md  algorithmic_tests.cpp  mathematical_tests.cpp  numerical_tests.cpp  property_test.hpp
tests/quantize/: benchmark_test.cpp  calibrator_test.cpp  fp8_activation_test.cpp  fp8_gemm_test.cpp  fp8_kernels_test.cpp  fp8_types_test.cpp  int8_kernels_test.cpp  qat_test.cpp  quantize_ops_test.cpp  quantize_tensor_test.cpp
tests/raytrace/: bvh_test.cpp  ray_box_test.cpp  ray_sphere_test.cpp
tests/sparse/: integration_test.cpp  krylov_test.cpp  preconditioned_solver_test.cpp  preconditioner_benchmark_test.cpp  preconditioner_test.cpp  sparse_matrix_test.cpp
tests/testing/: memory_safety_test.cpp  robustness_test.cpp
tests/topology/: test_topology_map.cpp
(+272 files in other folders)
